--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "platinum-server",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "dev": "tsx watch -r dotenv/config src/index.ts",
     "start": "node dist/index.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.1",
+    "@prisma/client": "6.7.0",
     "better-auth": "^1.2.7",
     "hono": "^4.7.8"
   },
