Update package dependencies and configuration for better-auth integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,7 @@
     "strict": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
-    "types": [
-      "node"
-    ],
-   
+    "types": ["node"]
   },
   "exclude": ["node_modules"]
 }
