--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch -r dotenv/config src/index.ts",
-    "start": "node dist/index.js"
+    "start": "tsx src/index.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.1",
     "@prisma/client": "6.7.0",
     "better-auth": "^1.2.7",
-    "hono": "^4.7.8"
+    "dotenv": "^16.5.0",
+    "hono": "^4.7.8",
+    "tsx": "^4.7.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
     "prisma": "^6.7.0",
-    "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
 }
